# c_library_application

./: .gitignore  CMakeLists.txt  README.md
include/: book.h  checksum.h  customer.h  date.h  linkedlist.h  object.h
src/: book.c  checksum.c  customer.c  date.c  linkedlist.c  main.c
